<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanDulceCamposFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/titulotipoPan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_tipo"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnertipoPan"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulotipoPan"
            android:layout_alignLeft="@id/titulotipoPan"
            android:layout_alignRight="@id/titulotipoPan"

            android:layout_marginTop="10dp"
            android:entries="@array/tipoPanDulce" />

        <TextView
            android:id="@+id/tituloHarina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnertipoPan"
            android:layout_alignLeft="@id/spinnertipoPan"
            android:text="@string/label_harina"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerHarina"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tituloHarina"
            android:entries="@array/tipoHarina" />

        <TextView
            android:id="@+id/tituloTamPan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerHarina"
            android:layout_alignLeft="@id/spinnerHarina"
            android:text="@string/label_tamPan"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerTamPan"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tituloTamPan"
            android:layout_alignLeft="@id/tituloTamPan"
            android:layout_alignRight="@id/tituloTamPan"
            android:entries="@array/tamPan" />

        <EditText
            android:id="@+id/cantidadPanDulce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerTamPan"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="Cantidad"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <Button
            android:id="@+id/agregarPanDulce"
            android:layout_width="125dp"
            android:layout_height="71dp"
            android:layout_below="@id/spinnerTamPan"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="185dp"
            android:layout_marginTop="41dp"
            android:layout_marginBottom="20dp"
            android:hint="Agregar Producto" />

        <TextView
            android:id="@+id/subtotal_pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerTamPan"
            android:layout_alignStart="@+id/spinnerTamPan"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="173dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="17dp"
            android:textAlignment="center" />

    </RelativeLayout>
    </ScrollView>
</FrameLayout>